crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_do_without_monad.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "value = do\n    pure ()"
---
nash::names::do_without_monad

  × A `do` expression requires `Monad`.
   ╭─[Main.nash:1:9]
 1 │ ╭─▶ value = do
 2 │ ╰─▶     pure ()
   ╰────
  help: Import the module that defines `Monad`.
