crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_duplicate_decl.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × This file has multiple `name` declarations.
   ╭─[Main.nash:2:1]
 1 │ name = other
   · ──┬─
   ·   ╰── first definition
 2 │ other = name
   · ──┬──
   ·   ╰── and another first definition
   ╰────
  help: Rename one of the definitions.
