crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_duplicate_method.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "module Main exposing (..)\ntrait Equal 'a where\n    name : 'a -> 'a\n    name x = x\n    name : 'a -> Bool\n    name x = True\n"
---
nash::names::duplicate_method

  × This trait has multiple `name` methods.
   ╭─[Main.nash:5:5]
 2 │ trait Equal 'a where
 3 │     name : 'a -> 'a
   ·     ──┬─
   ·       ╰── first definition
 4 │     name x = x
 5 │     name : 'a -> Bool
   ·     ──┬─
   ·       ╰── and another first definition
 6 │     name x = True
   ╰────
  help: Rename one of the definitions.
