crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_duplicate_pattern.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "value pair =\n    case pair of\n        (x, x) -> x"
---
nash::names::duplicate_pattern

  × This `case` pattern has multiple `x` variables.
   ╭─[Main.nash:3:13]
 2 │     case pair of
 3 │         (x, x) -> x
   ·          ┬  ┬
   ·          │  ╰── and another first definition
   ·          ╰── first definition
   ╰────
  help: Rename one of the definitions.
