crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_duplicate_trait_parameter.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × This trait has multiple `name` type parameters.
   ╭─[Main.nash:2:1]
 1 │ name = other
   · ──┬─
   ·   ╰── first definition
 2 │ other = name
   · ──┬──
   ·   ╰── and another first definition
   ╰────
  help: Rename one of the definitions.
