crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_duplicate_type.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × This file defines multiple `name` types.
   ╭─[Main.nash:2:1]
 1 │ name = other
   · ──┬─
   ·   ╰── first definition
 2 │ other = name
   · ──┬──
   ·   ╰── and another first definition
   ╰────
  help: Rename one of the definitions.
